app/src/main/java/com/example/todolist/domain/errors/RoomError.kt
package com.example.todolist.domain.errors

enum class RoomError : ErrorDefault {
    DATABASE_ERROR,
    ILLEGAL_STATE,
    ILLEGAL_ARGUMENT,
    UNKNOWN_ERROR
}